src/app/globals.css
/* font */
/* @import url("https://fonts.googleapis.com/css2?family=Bitter:wght@200;400;500;700;900&display=swap"); */
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;800;900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    *::before,
    *::after {
        border-width: 0;
        pointer-events: none;
        user-select: none;
    }
    html {
        -webkit-text-size-adjust: 100%; /* for iOS Safari */
        text-size-adjust: 100%; /* for other mobile browsers */

        -webkit-font-smoothing: antialiased;
    }

    html:focus-within {
        scroll-behavior: smooth;
    }

    body {
        text-rendering: optimizeSpeed;
        position: relative;

        @apply relative grid min-h-screen w-screen max-w-[100vw] grid-cols-[1fr] grid-rows-[1fr_auto] overflow-x-clip break-words !bg-surface-50 font-orbitron text-lg font-normal text-surface-900 transition-colors duration-500 dark:!bg-surface-900 dark:text-surface-50;
    }
    /* body::after {
        @apply fixed inset-0 -z-[10] bg-gradient-to-b from-primary-50 to-secondary-50 bg-cover bg-fixed bg-no-repeat opacity-100 transition-opacity duration-500 content-[""] dark:opacity-0;
    }
    body::before {
        @apply fixed inset-0 -z-[10] bg-gradient-to-b from-primary-900 to-secondary-900 bg-cover bg-fixed bg-no-repeat opacity-0 transition-opacity duration-500 content-[""] dark:opacity-100;
    } */

    svg {
        display: block;
    }

    /* Add pointer cursors to interactive elements  */
    label:not([disabled]),
    button:not([disabled]),
    select:not([disabled]),
    summary:not([disabled]),
    [type="radio"]:not([disabled]),
    [type="submit"]:not([disabled]),
    [type="checkbox"]:not([disabled]) {
        cursor: pointer;
    }

    [disabled] {
        cursor: not-allowed;
    }

    /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
    ul[role="list"],
    ol[role="list"],
    li {
        list-style: none;
    }

    /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
    @media (prefers-reduced-motion: reduce) {
        html:focus-within {
            scroll-behavior: auto;
        }

        *,
        *::before,
        *::after {
            animation-duration: 0.01ms !important;
            animation-iteration-count: 1 !important;
            transition-duration: 0.01ms !important;
            scroll-behavior: auto !important;
        }
    }

    /* custom scrollbar */

    /* body {
        scrollbar-gutter: stable both-edges;
    } */

    ::-webkit-scrollbar {
        width: min(0.5rem, 0.5vw);
        /* min-width: 100%; */
    }

    ::-webkit-scrollbar-track {
        @apply bg-primary-900/25 backdrop-blur-sm;
    }

    ::-webkit-scrollbar-thumb {
        @apply bg-tertiary-500;
        border-radius: 100px;
    }
}
@layer utilities {
    /* UI */

    .title-bg {
        background-image: url("/images/bg/r/26/1024.webp");
    }

    /* Typography */
    .h1 {
        @apply !text-[clamp(2rem,3vw+2rem,5.375rem)] uppercase !leading-tight  lg:!text-4xl xl:!text-5xl 2xl:!text-6xl;
    }

    .h2 {
        @apply text-shadow container px-2 text-center  !text-2xl font-bold !leading-tight md:!text-3xl  xl:!text-4xl;
    }
    .h3 {
        @apply !text-[1.5rem] font-semibold leading-normal md:!text-2xl xl:!text-3xl;
    }
    .h4 {
        @apply !text-[1.25rem] tracking-widest md:!text-2xl;
    }
    .h5 {
        @apply !text-base uppercase  md:!text-[1.25rem] xl:!text-xl;
    }
    .h6 {
        @apply !text-lg font-medium;
    }
    .h7 {
        @apply !text-xs tracking-wide;
    }

    .text-shadow {
        text-shadow: -1px 1px 1px hsla(0, 0%, 100%, 0.5),
            1px -1px 1px hsla(0, 0%, 0%, 0.5);
    }
    :is(.dark .text-stroke) {
        -webkit-text-stroke: 1px #fff;
    }

    .text-stroke {
        -webkit-text-stroke: 1px #000;
    }

    .superscript {
        @apply mr-1 inline text-start align-super text-[60%];
    }

    /* Spicy */
    .spicy {
        -webkit-text-fill-color: transparent !important;
        @apply text-stroke !text-transparent;
    }

    @supports (
            (background-clip: text) or
                (-webkit-background-clip: text)
        )
        and
        (
            (color: transparent) or
                (-webkit-text-fill-color: transparent)
        ) {
        .spicy {
            line-height: 1.45em !important;
            text-shadow: -1px 1px 2px hsla(0, 0%, 100%, 0.1),
                1px -1px 2px hsla(0, 0%, 0%, 0.1);

            background-clip: text;
            -webkit-background-clip: text;

            @apply m-0 animate-bg-slide;
        }

        @supports (
            -webkit-box-reflect: below -0.35em
                linear-gradient(transparent 52%, #000)
        ) {
            .spicy {
                -webkit-box-reflect: below -0.35em linear-gradient(transparent
                            52%, #000);
            }
        }
    }

    .linear-mask-angle {
        mask-image: linear-gradient(
            to left bottom,
            black,
            black 80%,
            transparent 85%
        );
        -webkit-mask-image: linear-gradient(
            to left bottom,
            black,
            black 80%,
            transparent 85%
        );
    }

    .linear-mask-bottom {
        mask-image: linear-gradient(
            to bottom,
            black,
            black 90%,
            transparent 95%
        );
        -webkit-mask-image: linear-gradient(
            to bottom,
            black,
            black 90%,
            transparent 95%
        );
    }

    .radial-mask {
        mask-image: radial-gradient(
            black 0%,
            black 65%,
            transparent 70%,
            transparent 100%
        );
        -webkit-mask-image: radial-gradient(
            black 0%,
            black 65%,
            transparent 70%,
            transparent 100%
        );
    }

    .hero-image-mask-1-wrap {
        mask-image: linear-gradient(
            to bottom,
            transparent 0%,
            transparent 12%,
            black 15%,
            black 55%,
            transparent 80%
        );
        -webkit-mask-image: linear-gradient(
            to bottom,
            transparent 0%,
            transparent 12%,
            black 15%,
            black 55%,
            transparent 80%
        );
    }

    .hero-image-mask-2-wrap {
        mask-image: radial-gradient(
            black 0%,
            black 15%,
            transparent 20%,
            transparent 100%
        );
        -webkit-mask-image: radial-gradient(
            black 0%,
            black 15%,
            transparent 20%,
            transparent 100%
        );
    }

    .hero-image-mask-2 {
        mask-image: linear-gradient(
            to left,
            transparent 0%,
            transparent 40%,
            black 45%,
            black 55%,
            transparent 58%
        );
        -webkit-mask-image: linear-gradient(
            to left,
            transparent 0%,
            transparent 40%,
            black 45%,
            black 55%,
            transparent 58%
        );
    }
    .blob {
        clip-path: url(#clip-blob);
    }

    .waves {
        clip-path: url(#clip-waves);
    }

    .linear-mask {
        mask-image: linear-gradient(
            to left,
            transparent 50%,
            black 80%
        );
        -webkit-mask-image: linear-gradient(
            to left,
            transparent 50%,
            black 80%
        );
    }
    .linear-mask {
        mask-image: linear-gradient(
            to left,
            transparent 50%,
            black 80%
        );
        -webkit-mask-image: linear-gradient(
            to left,
            transparent 50%,
            black 80%
        );
    }
    .clip-poly-right {
        clip-path: polygon(
            25% 0%,
            100% 0%,
            75% 100%,
            0% 100%
        );
    }

    .clip-poly-left {
        clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
    }
    @media speech {
        .content-after::after {
            display: none;
        }
    }

    /* Chrome, Safari, Edge, Opera */
    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }

    /* Firefox */
    input[type="number"] {
        -moz-appearance: textfield;
    }

    /* keyframes */

    @keyframes scale-pulse-full {
        0%,
        100% {
            opacity: 0;
            transform: scale(0);
        }
        50% {
            opacity: 1;
            transform: scale(1);
        }
    }
}

